--- a/pages_template/uni-id/login/css/main.css
+++ b/pages_template/uni-id/login/css/main.css
@@ -1,145 +1,109 @@
 .content {
 	display: flex;
 	flex-direction: column;
-	justify-content:center;
+	justify-content: center;
 }
 
-/* 头部 logo */
+/* 头部 logo 开始 */
 .header {
-	width:161rpx;
-	height:161rpx;
-	box-shadow:0rpx 0rpx 60rpx 0rpx rgba(0,0,0,0.1);
-	border-radius:50%;
-	background-color: #000000; 
+	width: 160rpx;
+	height: 160rpx;
+	box-shadow: 0rpx 0rpx 60rpx 0rpx rgba(0, 0, 0, 0.1);
+	border-radius: 50%;
 	margin-top: 40rpx;
 	margin-bottom: 40rpx;
 	margin-left: auto;
 	margin-right: auto;
 }
-.header image{
-	width:161rpx;
-	height:161rpx;
-	border-radius:50%;
+
+.header.weixin-one-click-login {
+	margin-top: 200rpx;
+	transform: scale(1.4);
 }
 
-/* 主体 */
-.main {
+.header .logo {
+	width: 160rpx;
+	height: 160rpx;
+	border-radius: 50%;
+	border: 0;
+}
+
+/* 头部 logo 结束 */
+
+/* 表单主体 开始 */
+.form-view {
 	display: flex;
 	flex-direction: column;
 	padding-left: 70rpx;
 	padding-right: 70rpx;
 }
-.tips {
-	color: #999999;
-	font-size: 28rpx;
-	margin-top: 64rpx;
-	margin-left: 48rpx;
-}
 
-/* 登录按钮 */
-.wbutton{
-	margin-top: 96rpx;
-}
-
-/* 其他登录方式 */
-.other_login{
+.form-view .form-item {
 	display: flex;
 	flex-direction: row;
-	justify-content: center;
+	justify-content: space-between;
 	align-items: center;
-	margin-top: 256rpx;
-	text-align: center;
+	color: #333333;
+	padding: 24rpx 32rpx;
+	margin: 26rpx 0;
 }
-.login_icon{
+
+.form-view .form-border {
 	border: none;
-	font-size: 64rpx;
-	margin: 0 64rpx 0 64rpx;
-	color: rgba(0,0,0,0.7)
+	border-radius: 2.5rem;
+	-webkit-box-shadow: 0 0 60rpx 0 rgba(43, 86, 112, 0.1);
+	box-shadow: 0 0 60rpx 0 rgba(43, 86, 112, 0.1);
 }
-.wechat_color{
-	color: #83DC42;
+
+.form-view .form-input {
+	flex: 1;
+	text-align: left;
+	font-size: 28rpx;
+	padding-right: 10rpx;
+	margin-left: 20rpx;
+	width: 100%;
 }
-.weibo_color{
-	color: #F9221D;
-}
-.github_color{
-	color: #24292E;
+
+/* 表单主体 结束 */
+/* 登录按钮 */
+.login-btn {
+	margin-top: 60rpx;
+	width: 80%;
+	height: 100rpx;
+	margin-left: auto;
+	margin-right: auto;
 }
 
 /* 底部 */
-.footer{
+.footer {
 	display: flex;
 	flex-direction: row;
 	justify-content: center;
 	align-items: center;
 	font-size: 28rpx;
-	margin-top: 50rpx;
-	color: rgba(0,0,0,0.7);
+	margin-top: 80rpx;
+	color: rgba(0, 0, 0, 0.7);
 	text-align: center;
 	height: 40rpx;
 	line-height: 40rpx;
 }
-.footer text{
+
+.footer .center-line {
 	font-size: 24rpx;
 	margin-left: 15rpx;
 	margin-right: 15rpx;
 }
 
-.main-list{
-		display: flex;
-		flex-direction: row;
-		justify-content: space-between;
-		align-items: center;
-		color: #333333;
-		padding: 24rpx 32rpx;
-		margin:26rpx 0;
-	}
-	.img{
-		width: 32rpx;
-		height: 32rpx;
-		font-size: 32rpx;
-	}
-	.main-input{
-		flex: 1;
-		text-align: left;
-		font-size: 28rpx;
-		padding-right: 10rpx;
-		margin-left: 20rpx;
-	}
-	.vercode {
-		color: rgba(0,0,0,0.7);
-		font-size: 24rpx;
-		/* line-height: 100rpx; */
-	}
-	.vercode-run {
-		color: rgba(0,0,0,0.4) !important;
-	}
-	.oBorder{
-	    border: none;
-	    border-radius: 2.5rem ;
-	    -webkit-box-shadow: 0 0 60rpx 0 rgba(43,86,112,.1) ;
-	    box-shadow: 0 0 60rpx 0 rgba(43,86,112,.1) ;
-	}
-	.login-btn{
-		margin-top: 60rpx;
-		width: 80%;
-		height: 100rpx;
-		margin-left: auto;
-		margin-right: auto;
-	}
-	.login-btn2{
-		margin-top: 60rpx;
-		width: 80%;
-		height: 100rpx;
-		background: linear-gradient(to right, rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.6));
-		color: rgb(255, 255, 255);
-		margin-left: auto;
-		margin-right: auto;
-	}
-
-	.other_login{
-		margin-top: 150rpx;
-	}
-	.login .footer{
-		margin-top: 80rpx;
-	}
+.login-icon-view{
+	width: 100%;
+	text-align: center;
+	margin-top: 80rpx;
+	display: flex;
+	justify-content: center;
+}
+.login-icon-item{
+	width: 120rpx;
+}
+.tips{
+	margin-top: 20rpx;
+}
